--- a/formulaire de tache.html
+++ b/formulaire de tache.html
@@ -4,28 +4,44 @@
     <link rel="stylesheet" href="menu2.css">
     <title>sites</title>
     <link rel="image" href="https://www.bing.com/ck/a?!&&p=5a6e06a0aea92f08JmltdHM9MTY3NjQxOTIwMCZpZ3VpZD0zZmY5OWQ4NC0zMDJkLTZlZTQtMDEyNy04ZjA5MzEzMDZmMDYmaW5zaWQ9NTQzMw&ptn=3&hsh=3&fclid=3ff99d84-302d-6ee4-0127-8f0931306f06&u=a1L2ltYWdlcy9zZWFyY2g_cT1JbWFnZSUyMFNpbXBsZSZGT1JNPUlRRlJCQSZpZD1EQTQ5RDZFNzE2REU5NTc1REZENzQ4NEIzQkFFNEREMUY5Q0IxNUM0&ntb=1">
-    <link href="css/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
    
 </head>
     <body>   
-        <div class="login">
-                <h1>commencer avec un défis gratuit</h1><br><br><br<br><br><br>
-                <p>NAME</p>
-        <label><input type='text'name="name"placeholder="Enter your name" class="form-control"></label><br><br>
-        <p>EMAIL</p>
-        <label><input name="email"placeholder="Enter a valid email adress" class="form-control"><br><br>
-            <div class="message">MESSAGE</div>
-        <textarea cols="30" rows="3">enter you message</textarea><br><br>
-        <input class="form-check-input" type="checkbox" value="" id="cgu" required>
-        <label class="form-check-label" for="cgu">I accept the Terms of service</label>
-        <br><br>
-        <div class="buttun">
-         <button class="btn btn-bg-success " type="submit">soumettez votre demande</button><br><br>
-    </div>
-</div>
         <div class="row">
-                <h1>Crééz votre site web avec Nicepage</h1>
-<P>Duis autre irure dolor in rereprehenderit in voluptate velit esse cillum dolore eu fugiat nulla<br>esse cillum dolore eu fugiatnulla<br>pariata excepteur sint accaecat cupidata....laborum</P>
-    </div>
+            <div class="col-md-7">
+                <form action="" class="formulaire">
+                    <h4 class="pt-5 m-4">Commencer avec un devis gratuit</h4>
+                    <div class="m-4">
+                        <label for="exampleFormControlInput1" class="form-label">Email address</label>
+                        <input type="email" class="form-control" id="exampleFormControlInput1" 
+                        placeholder="enter your name">
+                      </div>
+                      <div class="m-4">
+                        <label for="exampleFormControlInput1" class="form-label">Email address</label>
+                        <input type="email" class="form-control" id="exampleFormControlInput1" 
+                        placeholder="enter your email adress">
+                      </div>
+                    <div class="m-4">
+                        <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3">Enter your message</textarea>
+                      </div>
+
+                    <div class="m-4"><input type="checkbox">I accept the term of service</div>
+                    
+                        <button class="btn button-soumettre m-4">Soumettre votre demande</button>
+                    
+                </form>
+            </div>
+            <div class="col-md-5">
+                <div class="box-text">
+                    <h1>Creer votre site web avec Nicepage</h1>
+                    <p class="m-4">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci illum iusto ipsam, 
+                        perferendis laboriosam incidunt animi maxime dolor soluta explicabo! Cum accusamus 
+                        consequuntur tempore omnis voluptate quasi deleniti illum corrupti!</p>
+                </div>
+
+            </div>
+        </div>
 </body>
 </html>
